--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,12 @@ Depends:
 Imports:
     unikn
 Suggests:
+    cli,
     knitr,
     rmarkdown,
     spelling
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 License: CC BY-SA 4.0 
 URL: https://github.com/hneth/unicol/
 BugReports: https://github.com/hneth/unicol/issues
