--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(uni_princeton_2)
 export(uni_regensburg_1)
 export(uni_regensburg_2)
 export(uni_regensburg_3)
+export(uni_stuttgart)
 export(uni_ulm_1)
 export(uni_ulm_2)
 export(unicol.guide)
