--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(uni_konstanz_1)
 export(uni_konstanz_2)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
+export(uni_pal_1)
 export(uni_princeton_0)
 export(uni_princeton_1)
 export(uni_princeton_2)
