add new exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(hu_pal_2)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
+export(mit_1)
 export(mpg_pal)
 export(rpi_pal_1)
 export(rpi_pal_2)
@@ -22,6 +23,14 @@ export(rpi_pal_3)
 export(rptu_pal)
 export(uni_bonn_1)
 export(uni_bonn_2)
+export(uni_california_primary_1)
+export(uni_california_secondary_2)
+export(uni_chicago_primary_1)
+export(uni_chicago_secondary_2)
+export(uni_columbia)
+export(uni_cornell_accent_web_3)
+export(uni_cornell_primary_web_1)
+export(uni_cornell_secondary_web_2)
 export(uni_freiburg_0)
 export(uni_freiburg_1)
 export(uni_freiburg_2)
@@ -34,6 +43,14 @@ export(uni_goettingen_2)
 export(uni_goettingen_3)
 export(uni_hamburg_1)
 export(uni_hamburg_2)
+export(uni_harvard_accent_3)
+export(uni_harvard_primary_1)
+export(uni_harvard_secondary_2)
+export(uni_hopkins_accent_4)
+export(uni_hopkins_grayscale_5)
+export(uni_hopkins_identity_1)
+export(uni_hopkins_primary_2)
+export(uni_hopkins_secondary_3)
 export(uni_jena_1)
 export(uni_jena_2)
 export(uni_kiel_1)
@@ -44,16 +61,25 @@ export(uni_konstanz_1)
 export(uni_konstanz_2)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
+export(uni_michigan_primary_1)
+export(uni_michigan_secondary_2)
 export(uni_pal_1)
+export(uni_penn_logo_1)
+export(uni_penn_web_2)
 export(uni_princeton_0)
 export(uni_princeton_1)
 export(uni_princeton_2)
 export(uni_regensburg_1)
 export(uni_regensburg_2)
 export(uni_regensburg_3)
-export(uni_stuttgart)
+export(uni_stanford_accent_2)
+export(uni_stanford_primary_1)
+export(uni_stanford_web_3)
+export(uni_stuttgart_1)
+export(uni_stuttgart_2_print)
 export(uni_ulm_1)
 export(uni_ulm_2)
+export(uni_yale_primary)
 export(unicol.guide)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
