--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,10 +21,10 @@ export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
 export(rptu_pal)
+export(uni_berkeley_primary_1)
+export(uni_berkeley_secondary_2)
 export(uni_bonn_1)
 export(uni_bonn_2)
-export(uni_california_primary_1)
-export(uni_california_secondary_2)
 export(uni_chicago_primary_1)
 export(uni_chicago_secondary_2)
 export(uni_columbia)
@@ -63,6 +63,8 @@ export(uni_mannheim_1)
 export(uni_mannheim_2)
 export(uni_michigan_primary_1)
 export(uni_michigan_secondary_2)
+export(uni_northwestern_primary_1)
+export(uni_northwestern_secondary_2)
 export(uni_pal_1)
 export(uni_penn_logo_1)
 export(uni_penn_web_2)
@@ -80,6 +82,10 @@ export(uni_stuttgart_2_print)
 export(uni_ulm_1)
 export(uni_ulm_2)
 export(uni_yale_primary)
+export(uni_york_accent_4)
+export(uni_york_neutral_3)
+export(uni_york_primary_1)
+export(uni_york_secondary_2)
 export(unicol.guide)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
