--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,10 @@ export(lmu_pal_2)
 export(lmu_pal_3)
 export(mit_1)
 export(mpg_pal)
+export(nyu_accent_4)
+export(nyu_neutral_3)
+export(nyu_primary_1)
+export(nyu_secondary_2)
 export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
@@ -82,10 +86,6 @@ export(uni_stuttgart_2_print)
 export(uni_ulm_1)
 export(uni_ulm_2)
 export(uni_yale_primary)
-export(uni_york_accent_4)
-export(uni_york_neutral_3)
-export(uni_york_primary_1)
-export(uni_york_secondary_2)
 export(unicol.guide)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
