--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(hu_pal_2)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
-export(mit_1)
+export(mit_pal)
 export(mpg_pal)
 export(nyu_accent_4)
 export(nyu_neutral_3)
