--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,10 @@ export(lmu_pal_2)
 export(lmu_pal_3)
 export(mit_pal)
 export(mpg_pal)
-export(nyu_accent_4)
-export(nyu_neutral_3)
-export(nyu_primary_1)
-export(nyu_secondary_2)
+export(nyu_1)
+export(nyu_2)
+export(nyu_accent)
+export(nyu_neutral)
 export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
@@ -78,9 +78,9 @@ export(uni_princeton_2)
 export(uni_regensburg_1)
 export(uni_regensburg_2)
 export(uni_regensburg_3)
-export(uni_stanford_accent_2)
-export(uni_stanford_primary_1)
-export(uni_stanford_web_3)
+export(uni_stanford_1)
+export(uni_stanford_accent)
+export(uni_stanford_web)
 export(uni_stuttgart_1)
 export(uni_stuttgart_2_print)
 export(uni_ulm_1)
