--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,16 +25,16 @@ export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
 export(rptu_pal)
-export(uni_berkeley_primary_1)
-export(uni_berkeley_secondary_2)
+export(uni_berkeley_1)
+export(uni_berkeley_2)
 export(uni_bonn_1)
 export(uni_bonn_2)
-export(uni_chicago_primary_1)
-export(uni_chicago_secondary_2)
+export(uni_chicago_1)
+export(uni_chicago_2)
 export(uni_columbia)
-export(uni_cornell_accent_web_3)
-export(uni_cornell_primary_web_1)
-export(uni_cornell_secondary_web_2)
+export(uni_cornell_1)
+export(uni_cornell_2)
+export(uni_cornell_3_accent)
 export(uni_freiburg_0)
 export(uni_freiburg_1)
 export(uni_freiburg_2)
