--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 export(CMU_1_core)
 export(CMU_2_tartan)
 export(CMU_3_campus)
-export(UCLA_1_primary)
-export(UCLA_2_secondary)
-export(UCLA_3_tertiary)
+export(UCLA_1)
+export(UCLA_2)
+export(UCLA_3)
 export(UCSD_1_core)
 export(UCSD_2_accent)
 export(UCSD_3_neutral)
@@ -45,8 +45,8 @@ export(lmu_pal_3)
 export(michigan_1)
 export(michigan_2)
 export(mit_pal)
-export(monash_1_primary)
-export(monash_2_secondary)
+export(monash_1)
+export(monash_2)
 export(mpg_pal)
 export(northwestern_1)
 export(northwestern_2)
