--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(UCSD_2_accent)
 export(UCSD_3_neutral)
 export(berkeley_1)
 export(berkeley_2)
+export(birmingham_1)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
@@ -20,8 +21,8 @@ export(columbia)
 export(cornell_1)
 export(cornell_2)
 export(cornell_3_accent)
-export(duke_1_primary)
-export(duke_2_secondary)
+export(duke_1)
+export(duke_2)
 export(eth_pal_1)
 export(eth_pal_2)
 export(eth_pal_3)
@@ -64,6 +65,7 @@ export(rptu_pal)
 export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
+export(toronto_1)
 export(uni_bonn_1)
 export(uni_bonn_2)
 export(uni_freiburg_0)
