--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,12 @@ export(jhu_4_gray)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
+export(mcgill_brights)
+export(mcgill_darks)
+export(mcgill_grey)
+export(mcgill_muted)
+export(mcgill_pastels)
+export(mcgill_red)
 export(michigan_1)
 export(michigan_2)
 export(mit_pal)
@@ -55,6 +61,14 @@ export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
 export(nyu_neutral)
+export(oxford_blog)
+export(oxford_brand)
+export(oxford_error)
+export(oxford_general)
+export(oxford_graduate)
+export(oxford_link)
+export(oxford_shades)
+export(oxford_socialmedia)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
@@ -66,6 +80,10 @@ export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
 export(toronto_1)
+export(ucalgary_accent)
+export(ucalgary_primary)
+export(ucalgary_secondary)
+export(ucalgary_warmgreys)
 export(uni_bonn_1)
 export(uni_bonn_2)
 export(uni_freiburg_0)
