--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,10 @@ export(caltech_3)
 export(chicago_1)
 export(chicago_2)
 export(columbia)
+export(conc1)
+export(conc2)
+export(conc3)
+export(conc4)
 export(cornell_1)
 export(cornell_2)
 export(cornell_3_accent)
@@ -80,6 +84,7 @@ export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
 export(toronto_1)
+export(ubc1)
 export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
@@ -120,6 +125,8 @@ export(unicol.guide)
 export(upenn_1)
 export(upenn_2)
 export(yale_1)
+export(york1)
+export(york2)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
 importFrom(unikn,pal_unikn_pref)
