add new exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,10 @@ export(cornell_2)
 export(cornell_3_accent)
 export(duke_1)
 export(duke_2)
+export(dundee_background)
+export(dundee_block)
+export(dundee_core)
+export(dundee_highlight)
 export(eth_pal_1)
 export(eth_pal_2)
 export(eth_pal_3)
