--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(UCSD_3_neutral)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham_1)
+export(brown_1)
+export(brown_2)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
@@ -31,6 +33,7 @@ export(dundee_background)
 export(dundee_block)
 export(dundee_core)
 export(dundee_highlight)
+export(edinburgh_1)
 export(eth_pal_1)
 export(eth_pal_2)
 export(eth_pal_3)
@@ -51,6 +54,8 @@ export(jhu_4_gray)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
+export(manchester_uni_1)
+export(manchester_uni_accent)
 export(mcgill_brights)
 export(mcgill_darks)
 export(mcgill_grey)
