--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,9 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
+export(umass_2)
+export(umass_brand)
+export(umass_neutrals)
 export(uni_bonn_1)
 export(uni_bonn_2)
 export(uni_freiburg_0)
@@ -120,6 +123,7 @@ export(uni_koeln_1)
 export(uni_koeln_2)
 export(uni_konstanz_1)
 export(uni_konstanz_2)
+export(uni_manchester_1)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
 export(uni_pal_1)
