--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,8 @@ export(mcgill_grey)
 export(mcgill_muted)
 export(mcgill_pastels)
 export(mcgill_red)
+export(mcmaster_brighterworld)
+export(mcmaster_heritage)
 export(michigan_1)
 export(michigan_2)
 export(mit_pal)
@@ -85,10 +87,13 @@ export(oxford_socialmedia)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
+export(queens_primary)
+export(queens_secondary)
 export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
 export(rptu_pal)
+export(sfu_brand)
 export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
@@ -137,6 +142,15 @@ export(uni_ulm_2)
 export(unicol.guide)
 export(upenn_1)
 export(upenn_2)
+export(uvic_complementary)
+export(uvic_core)
+export(uwaterloo_Engineering)
+export(uwaterloo_arts)
+export(uwaterloo_environment)
+export(uwaterloo_health)
+export(uwaterloo_main)
+export(uwaterloo_math)
+export(uwaterloo_science)
 export(yale_1)
 export(york1)
 export(york2)
