--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,8 +144,8 @@ export(upenn_1)
 export(upenn_2)
 export(uvic_complementary)
 export(uvic_core)
-export(uwaterloo_Engineering)
 export(uwaterloo_arts)
+export(uwaterloo_engineering)
 export(uwaterloo_environment)
 export(uwaterloo_health)
 export(uwaterloo_main)
