--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ export(uni_goettingen_2)
 export(uni_goettingen_3)
 export(uni_hamburg_1)
 export(uni_hamburg_2)
+export(uni_heidelberg_1)
 export(uni_jena_1)
 export(uni_jena_2)
 export(uni_kiel_1)
@@ -151,6 +152,7 @@ export(uwaterloo_health)
 export(uwaterloo_main)
 export(uwaterloo_math)
 export(uwaterloo_science)
+export(western_uni_1)
 export(yale_1)
 export(york1)
 export(york2)
