export new pals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(berkeley_2)
 export(birmingham_1)
 export(brown_1)
 export(brown_2)
+export(bu_1)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
@@ -51,6 +52,8 @@ export(jhu_1)
 export(jhu_2)
 export(jhu_3_accent)
 export(jhu_4_gray)
+export(lancaster_1)
+export(lancaster_2)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
