--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,11 +54,14 @@ export(jhu_3_accent)
 export(jhu_4_gray)
 export(lancaster_1)
 export(lancaster_2)
+export(laval_1)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
 export(manchester_uni_1)
 export(manchester_uni_accent)
+export(manitoba_1)
+export(manitoba_2)
 export(mcgill_brights)
 export(mcgill_darks)
 export(mcgill_grey)
@@ -79,6 +82,7 @@ export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
 export(nyu_neutral)
+export(ottawa_1)
 export(oxford_blog)
 export(oxford_brand)
 export(oxford_error)
