--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(bu_1)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
+export(carleton_1)
 export(chicago_1)
 export(chicago_2)
 export(columbia)
@@ -76,6 +77,8 @@ export(mit_pal)
 export(monash_1)
 export(monash_2)
 export(mpg_pal)
+export(mun_1)
+export(mun_2)
 export(northwestern_1)
 export(northwestern_2)
 export(nyu_1)
@@ -110,6 +113,7 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
+export(ug_1)
 export(umass_2)
 export(umass_brand)
 export(umass_neutrals)
