--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,14 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
+export(pal_glasgow_1)
+export(pal_glasgow_2)
+export(pal_minnesotatwin_1)
+export(pal_minnesotatwin_2)
+export(pal_msu)
+export(pal_pittsburgh_1)
+export(pal_pittsburgh_2)
+export(pal_waikato)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
@@ -113,6 +121,9 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
+export(uflorida_1)
+export(uflorida_2)
+export(uflorida_neutral)
 export(ug_1)
 export(umass_2)
 export(umass_brand)
