--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,14 +94,45 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
+export(pal_asu_primary)
+export(pal_asu_secondary)
+export(pal_dartmouth_1)
+export(pal_dartmouth_2)
+export(pal_dartmouth_3)
+export(pal_galway_1)
+export(pal_galway_2)
 export(pal_glasgow_1)
 export(pal_glasgow_2)
+export(pal_kassel_haus)
+export(pal_limerick_1)
+export(pal_limerick_2)
 export(pal_minnesotatwin_1)
 export(pal_minnesotatwin_2)
+export(pal_minnesotatwin_primary)
+export(pal_minnesotatwin_secondary)
 export(pal_msu)
-export(pal_pittsburgh_1)
-export(pal_pittsburgh_2)
+export(pal_notredame_primary)
+export(pal_notredame_secondary)
+export(pal_pittsburgh_contemporary)
+export(pal_pittsburgh_legacy)
+export(pal_potsdam)
+export(pal_standrews_1)
+export(pal_standrews_2)
+export(pal_trinity_1)
+export(pal_trinity_2)
+export(pal_uci_1)
+export(pal_uci_secondary)
+export(pal_ucihealth_2)
+export(pal_ucihealth_3)
+export(pal_uflorida_neutral)
+export(pal_uflorida_primary)
+export(pal_uflorida_secondary)
+export(pal_vanderbiltu_core)
+export(pal_vanderbiltu_neutrals)
+export(pal_vanderbiltu_santurated)
 export(pal_waikato)
+export(pal_yeshivau)
+export(pla_asu_grayscale)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
@@ -121,9 +152,6 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
-export(uflorida_1)
-export(uflorida_2)
-export(uflorida_neutral)
 export(ug_1)
 export(umass_2)
 export(umass_brand)
