--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,13 +108,11 @@ export(pal_limerick_1)
 export(pal_limerick_2)
 export(pal_minnesotatwin_1)
 export(pal_minnesotatwin_2)
-export(pal_minnesotatwin_primary)
-export(pal_minnesotatwin_secondary)
 export(pal_msu)
 export(pal_notredame_primary)
 export(pal_notredame_secondary)
-export(pal_pittsburgh_contemporary)
-export(pal_pittsburgh_legacy)
+export(pal_pitt_1)
+export(pal_pitt_2)
 export(pal_potsdam)
 export(pal_standrews_1)
 export(pal_standrews_2)
