--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(jhu_4_gray)
 export(lancaster_1)
 export(lancaster_2)
 export(laval_1)
+export(limerick_1)
+export(limerick_2)
 export(lmu_pal_1)
 export(lmu_pal_2)
 export(lmu_pal_3)
@@ -104,8 +106,6 @@ export(pal_galway_2)
 export(pal_glasgow_1)
 export(pal_glasgow_2)
 export(pal_kassel_haus)
-export(pal_limerick_1)
-export(pal_limerick_2)
 export(pal_minnesotatwin_1)
 export(pal_minnesotatwin_2)
 export(pal_msu)
