--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,8 @@ export(mun_1)
 export(mun_2)
 export(northwestern_1)
 export(northwestern_2)
+export(notredame_1)
+export(notredame_2)
 export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
@@ -109,8 +111,6 @@ export(pal_kassel_haus)
 export(pal_minnesotatwin_1)
 export(pal_minnesotatwin_2)
 export(pal_msu)
-export(pal_notredame_primary)
-export(pal_notredame_secondary)
 export(pal_pitt_1)
 export(pal_pitt_2)
 export(pal_potsdam)
