--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,8 +114,6 @@ export(pal_msu)
 export(pal_pitt_1)
 export(pal_pitt_2)
 export(pal_potsdam)
-export(pal_standrews_1)
-export(pal_standrews_2)
 export(pal_trinity_1)
 export(pal_trinity_2)
 export(pal_uci_1)
@@ -141,6 +139,8 @@ export(rpi_pal_2)
 export(rpi_pal_3)
 export(rptu_pal)
 export(sfu_brand)
+export(standrews_1)
+export(standrews_2)
 export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
