--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,10 +75,13 @@ export(mcmaster_brighterworld)
 export(mcmaster_heritage)
 export(michigan_1)
 export(michigan_2)
+export(minnesotatwin_1)
+export(minnesotatwin_2)
 export(mit_pal)
 export(monash_1)
 export(monash_2)
 export(mpg_pal)
+export(msu_pal)
 export(mun_1)
 export(mun_2)
 export(northwestern_1)
@@ -108,9 +111,6 @@ export(pal_galway_2)
 export(pal_glasgow_1)
 export(pal_glasgow_2)
 export(pal_kassel_haus)
-export(pal_minnesotatwin_1)
-export(pal_minnesotatwin_2)
-export(pal_msu)
 export(pal_pitt_1)
 export(pal_pitt_2)
 export(pal_potsdam)
