--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,9 +111,6 @@ export(pal_galway_2)
 export(pal_glasgow_1)
 export(pal_glasgow_2)
 export(pal_kassel_haus)
-export(pal_pitt_1)
-export(pal_pitt_2)
-export(pal_potsdam)
 export(pal_trinity_1)
 export(pal_trinity_2)
 export(pal_uci_1)
@@ -128,6 +125,8 @@ export(pal_vanderbiltu_neutrals)
 export(pal_vanderbiltu_santurated)
 export(pal_waikato)
 export(pal_yeshivau)
+export(pitt_1)
+export(pitt_2)
 export(pla_asu_grayscale)
 export(princeton_0)
 export(princeton_1)
@@ -181,6 +180,7 @@ export(uni_manchester_1)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
 export(uni_pal_1)
+export(uni_potsdam)
 export(uni_regensburg_1)
 export(uni_regensburg_2)
 export(uni_regensburg_3)
