--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,9 +117,6 @@ export(pal_uci_1)
 export(pal_uci_secondary)
 export(pal_ucihealth_2)
 export(pal_ucihealth_3)
-export(pal_uflorida_neutral)
-export(pal_uflorida_primary)
-export(pal_uflorida_secondary)
 export(pal_vanderbiltu_core)
 export(pal_vanderbiltu_neutrals)
 export(pal_vanderbiltu_santurated)
@@ -149,6 +146,9 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
+export(uflorida_1)
+export(uflorida_2)
+export(uflorida_3)
 export(ug_1)
 export(umass_2)
 export(umass_brand)
