--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,9 +117,6 @@ export(pal_uci_1)
 export(pal_uci_secondary)
 export(pal_ucihealth_2)
 export(pal_ucihealth_3)
-export(pal_vanderbiltu_core)
-export(pal_vanderbiltu_neutrals)
-export(pal_vanderbiltu_santurated)
 export(pal_waikato)
 export(pal_yeshivau)
 export(pitt_1)
@@ -200,6 +197,9 @@ export(uwaterloo_health)
 export(uwaterloo_main)
 export(uwaterloo_math)
 export(uwaterloo_science)
+export(vanderbilt_1)
+export(vanderbilt_2)
+export(vanderbilt_3)
 export(western_uni_1)
 export(yale_1)
 export(york1)
