--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,8 @@ export(fu_pal_0)
 export(fu_pal_1)
 export(fu_pal_2)
 export(fu_pal_3)
+export(glasgow_1)
+export(glasgow_2)
 export(harvard_1)
 export(harvard_2)
 export(harvard_3_accent)
@@ -108,11 +110,7 @@ export(pal_dartmouth_2)
 export(pal_dartmouth_3)
 export(pal_galway_1)
 export(pal_galway_2)
-export(pal_glasgow_1)
-export(pal_glasgow_2)
 export(pal_kassel_haus)
-export(pal_trinity_1)
-export(pal_trinity_2)
 export(pal_uci_1)
 export(pal_uci_secondary)
 export(pal_ucihealth_2)
@@ -138,6 +136,8 @@ export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
 export(toronto_1)
+export(trinity_1)
+export(trinity_2)
 export(ubc1)
 export(ucalgary_accent)
 export(ucalgary_primary)
