fix bug and rename pals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ export(UCLA_3)
 export(UCSD_1_core)
 export(UCSD_2_accent)
 export(UCSD_3_neutral)
+export(asu_1)
+export(asu_2)
+export(asu_3)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham_1)
@@ -103,8 +106,6 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
-export(pal_asu_primary)
-export(pal_asu_secondary)
 export(pal_dartmouth_1)
 export(pal_dartmouth_2)
 export(pal_dartmouth_3)
@@ -119,7 +120,6 @@ export(pal_waikato)
 export(pal_yeshivau)
 export(pitt_1)
 export(pitt_2)
-export(pla_asu_grayscale)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
