--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ export(conc4)
 export(cornell_1)
 export(cornell_2)
 export(cornell_3_accent)
+export(dartmouth_1)
+export(dartmouth_2)
+export(dartmouth_3)
 export(duke_1)
 export(duke_2)
 export(dundee_background)
@@ -106,9 +109,6 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
-export(pal_dartmouth_1)
-export(pal_dartmouth_2)
-export(pal_dartmouth_3)
 export(pal_galway_1)
 export(pal_galway_2)
 export(pal_kassel_haus)
