--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,8 @@ export(fu_pal_0)
 export(fu_pal_1)
 export(fu_pal_2)
 export(fu_pal_3)
+export(galway_1)
+export(galway_2)
 export(glasgow_1)
 export(glasgow_2)
 export(harvard_1)
@@ -109,8 +111,6 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
-export(pal_galway_1)
-export(pal_galway_2)
 export(pal_kassel_haus)
 export(pal_uci_1)
 export(pal_uci_secondary)
