--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,11 +111,6 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
-export(pal_kassel_haus)
-export(pal_uci_1)
-export(pal_uci_secondary)
-export(pal_ucihealth_2)
-export(pal_ucihealth_3)
 export(pal_waikato)
 export(pal_yeshivau)
 export(pitt_1)
@@ -143,6 +138,10 @@ export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
 export(ucalgary_warmgreys)
+export(uci_1)
+export(uci_2)
+export(uci_3)
+export(uci_4)
 export(uflorida_1)
 export(uflorida_2)
 export(uflorida_3)
@@ -167,6 +166,7 @@ export(uni_hamburg_2)
 export(uni_heidelberg_1)
 export(uni_jena_1)
 export(uni_jena_2)
+export(uni_kassel)
 export(uni_kiel_1)
 export(uni_kiel_2)
 export(uni_koeln_1)
