--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,8 +111,6 @@ export(oxford_graduate)
 export(oxford_link)
 export(oxford_shades)
 export(oxford_socialmedia)
-export(pal_waikato)
-export(pal_yeshivau)
 export(pitt_1)
 export(pitt_2)
 export(princeton_0)
@@ -200,8 +198,10 @@ export(uwaterloo_science)
 export(vanderbilt_1)
 export(vanderbilt_2)
 export(vanderbilt_3)
+export(waikato)
 export(western_uni_1)
 export(yale_1)
+export(yeshiva)
 export(york1)
 export(york2)
 importFrom(unikn,newpal)
