--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,8 +116,8 @@ export(pitt_2)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
-export(queens_primary)
-export(queens_secondary)
+export(queens_1)
+export(queens_2)
 export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
