--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(uni_stuttgart_2_print)
 export(uni_ulm_1)
 export(uni_ulm_2)
 export(unicol.guide)
+export(unicol_data)
 export(upenn_1)
 export(upenn_2)
 export(uvic_complementary)
