update exported objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,10 @@ export(carleton_1)
 export(chicago_1)
 export(chicago_2)
 export(columbia)
-export(conc1)
-export(conc2)
-export(conc3)
-export(conc4)
+export(conc_1)
+export(conc_2)
+export(conc_3)
+export(conc_4)
 export(cornell_1)
 export(cornell_2)
 export(cornell_3_accent)
