add ggplot2 to Imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Description: The 'unicol' package provides the colors and color palettes of vari
 Depends:
     R (>= 3.4.0)
 Imports:
+    ggplot2,
     unikn
 Suggests:
     cli,
