--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,9 +42,9 @@ export(dundee_block)
 export(dundee_core)
 export(dundee_highlight)
 export(edinburgh_1)
-export(eth_pal_1)
-export(eth_pal_2)
-export(eth_pal_3)
+export(eth_1)
+export(eth_2)
+export(eth_3)
 export(fu_pal_0)
 export(fu_pal_1)
 export(fu_pal_2)
