--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,7 +131,7 @@ export(stanford_3_web)
 export(toronto_1)
 export(trinity_1)
 export(trinity_2)
-export(ubc1)
+export(ubc_1)
 export(ucalgary_accent)
 export(ucalgary_primary)
 export(ucalgary_secondary)
