--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth
              person("Lisa", "Trueb", role = "aut")
              )
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
-Description: The 'unicol' package provides the colors and color palettes of various universities for plotting and printing in R. 
+Description: The 'unicol' package provides the colors and color palettes of various universities for easy plotting and printing in R. We collect and provide a diverse range of color palettes for creating scientific visualizations. 
 Depends:
     R (>= 3.4.0)
 Imports:
