--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(galway_1)
 export(galway_2)
 export(glasgow_1)
 export(glasgow_2)
+export(guelph)
 export(harvard_1)
 export(harvard_2)
 export(harvard_3_accent)
@@ -143,7 +144,6 @@ export(uci_4)
 export(uflorida_1)
 export(uflorida_2)
 export(uflorida_3)
-export(ug_1)
 export(umass_2)
 export(umass_brand)
 export(umass_neutrals)
