--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,7 @@ export(jhu_3_accent)
 export(jhu_4_gray)
 export(lancaster_1)
 export(lancaster_2)
-export(laval_1)
+export(laval)
 export(limerick_1)
 export(limerick_2)
 export(lmu_pal_1)
