--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: unicol
 Type: Package
 Title: The Colors of your University
 Version: 0.1.0
-Date: 2023-08-15
+Date: 2023-08-16
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn", comment = c(ORCID = "0000-0001-5427-3141")), 
              person("Constantin", "Basler", role = "aut"),
              person("Paula", "Bauer", role = "aut"),
@@ -18,7 +18,7 @@ Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth
              person("Lisa", "Trueb", role = "aut")
              )
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
-Description: The 'unicol' package provides the colors and color palettes of various universities for easy plotting and printing in R. We collect and provide a diverse range of color palettes for creating scientific visualizations. 
+Description: Most universities use specific color combinations to express their unique brand identity. The 'unicol' package provides the colors and color palettes of various universities for easy plotting and printing in R. We collect and provide a diverse range of color palettes for creating scientific visualizations. 
 Depends:
     R (>= 3.4.0)
 Imports:
