--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,8 +202,8 @@ export(waikato)
 export(western_uni_1)
 export(yale_1)
 export(yeshiva)
-export(york1)
-export(york2)
+export(york_1)
+export(york_2)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
 importFrom(unikn,pal_unikn_pref)
