--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Suggests:
     spelling
 Encoding: UTF-8
 License: CC BY-SA 4.0 
-URL: https://github.com/hneth/unicol/
+URL: https://github.com/hneth/unicol/, https://hneth.github.io/unicol/
 BugReports: https://github.com/hneth/unicol/issues
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
