--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ cran-comments.md
 ^CRAN-RELEASE$
 
 # pkgdown: 
+# docs
 ^_pkgdown\.yml$
 ^pkgdown$
 ^logo.png$
@@ -66,6 +67,7 @@ cran-comments.md
 
 # dirs:
 _gitless
+
 
 # files:
 .PowerFolder
