--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(edinburgh_1)
 export(eth_1)
 export(eth_2)
 export(eth_3)
+export(example_1)
 export(fu_pal_0)
 export(fu_pal_1)
 export(fu_pal_2)
