--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ export(galway_1)
 export(galway_2)
 export(glasgow_1)
 export(glasgow_2)
+export(groningen_1)
+export(groningen_2)
 export(guelph)
 export(harvard_1)
 export(harvard_2)
