--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,10 @@ export(eth_1)
 export(eth_2)
 export(eth_3)
 export(example_1)
-export(fu_pal_0)
-export(fu_pal_1)
-export(fu_pal_2)
-export(fu_pal_3)
+export(fu_0)
+export(fu_1)
+export(fu_2)
+export(fu_3)
 export(galway_1)
 export(galway_2)
 export(glasgow_1)
@@ -60,8 +60,8 @@ export(guelph)
 export(harvard_1)
 export(harvard_2)
 export(harvard_3)
-export(hu_pal_1)
-export(hu_pal_2)
+export(hu_1)
+export(hu_2)
 export(jhu_0)
 export(jhu_1)
 export(jhu_2)
@@ -72,9 +72,9 @@ export(lancaster_2)
 export(laval)
 export(limerick_1)
 export(limerick_2)
-export(lmu_pal_1)
-export(lmu_pal_2)
-export(lmu_pal_3)
+export(lmu_1)
+export(lmu_2)
+export(lmu_3)
 export(manchester_uni_1)
 export(manchester_uni_accent)
 export(manitoba_1)
@@ -91,11 +91,11 @@ export(michigan_1)
 export(michigan_2)
 export(minnesotatwin_1)
 export(minnesotatwin_2)
-export(mit_pal)
+export(mit)
 export(monash_1)
 export(monash_2)
-export(mpg_pal)
-export(msu_pal)
+export(mpg)
+export(msu)
 export(mun_1)
 export(mun_2)
 export(northwestern_1)
@@ -122,10 +122,10 @@ export(princeton_1)
 export(princeton_2)
 export(queens_1)
 export(queens_2)
-export(rpi_pal_1)
-export(rpi_pal_2)
-export(rpi_pal_3)
-export(rptu_pal)
+export(rpi_1)
+export(rpi_2)
+export(rpi_3)
+export(rptu)
 export(sfu_brand)
 export(standrews_1)
 export(standrews_2)
