--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ export(uni_koeln_1)
 export(uni_koeln_2)
 export(uni_konstanz_1)
 export(uni_konstanz_2)
+export(uni_lisbon)
 export(uni_manchester_1)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
