--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,9 +136,9 @@ export(toronto_1)
 export(trinity_1)
 export(trinity_2)
 export(ubc_1)
+export(ucalgary_1)
+export(ucalgary_2)
 export(ucalgary_accent)
-export(ucalgary_primary)
-export(ucalgary_secondary)
 export(ucalgary_warmgreys)
 export(uci_1)
 export(uci_2)
@@ -147,8 +147,8 @@ export(uci_4)
 export(uflorida_1)
 export(uflorida_2)
 export(uflorida_3)
+export(umass_1)
 export(umass_2)
-export(umass_brand)
 export(umass_neutrals)
 export(uni_bonn_1)
 export(uni_bonn_2)
