--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,7 +106,6 @@ export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
 export(nyu_neutral)
-export(ottawa_1)
 export(oxford_blog)
 export(oxford_brand)
 export(oxford_error)
@@ -132,7 +131,6 @@ export(standrews_2)
 export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
-export(toronto_1)
 export(trinity_1)
 export(trinity_2)
 export(ubc_1)
@@ -164,7 +162,7 @@ export(uni_goettingen_2)
 export(uni_goettingen_3)
 export(uni_hamburg_1)
 export(uni_hamburg_2)
-export(uni_heidelberg_1)
+export(uni_heidelberg)
 export(uni_jena_1)
 export(uni_jena_2)
 export(uni_kassel)
@@ -175,7 +173,7 @@ export(uni_koeln_2)
 export(uni_konstanz_1)
 export(uni_konstanz_2)
 export(uni_lisbon)
-export(uni_manchester_1)
+export(uni_manchester)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
 export(uni_potsdam)
@@ -183,13 +181,15 @@ export(uni_regensburg_1)
 export(uni_regensburg_2)
 export(uni_regensburg_3)
 export(uni_stuttgart_1)
-export(uni_stuttgart_2_print)
+export(uni_stuttgart_print)
 export(uni_ulm_1)
 export(uni_ulm_2)
 export(unicol.guide)
 export(unicol_data)
+export(uottawa)
 export(upenn_1)
 export(upenn_2)
+export(utoronto)
 export(uvic_complementary)
 export(uvic_core)
 export(uwaterloo_arts)
