general clean up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,8 +119,8 @@ export(pitt_2)
 export(princeton_0)
 export(princeton_1)
 export(princeton_2)
-export(queens_1)
-export(queens_2)
+export(queensu_1)
+export(queensu_2)
 export(rpi_1)
 export(rpi_2)
 export(rpi_3)
@@ -203,11 +203,11 @@ export(vanderbilt_1)
 export(vanderbilt_2)
 export(vanderbilt_3)
 export(waikato)
-export(western_uni_1)
-export(yale_1)
+export(western_uni)
+export(yale)
 export(yeshiva)
-export(york_1)
-export(york_2)
+export(yorku_1)
+export(yorku_2)
 importFrom(unikn,newpal)
 importFrom(unikn,pal_unikn)
 importFrom(unikn,pal_unikn_pref)
