--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(bu_1)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
-export(carleton_1)
+export(carleton)
 export(chicago_1)
 export(chicago_2)
 export(columbia)
