--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(berkeley_2)
 export(birmingham_1)
 export(brown_1)
 export(brown_2)
-export(bu_1)
+export(bu)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
@@ -45,7 +45,7 @@ export(edinburgh_1)
 export(eth_1)
 export(eth_2)
 export(eth_3)
-export(example_1)
+export(example)
 export(fu_0)
 export(fu_1)
 export(fu_2)
