--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ export(vanderbilt_2)
 export(vanderbilt_3)
 export(waikato)
 export(western_uni)
+export(willamette)
 export(yale)
 export(yeshiva)
 export(yorku_1)
