--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,8 @@ export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
 export(nyu_neutral)
+export(ohio_uni_1)
+export(ohio_uni_2)
 export(oxford_blog)
 export(oxford_brand)
 export(oxford_error)
