--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,9 @@ export(vanderbilt_3)
 export(waikato)
 export(western_uni)
 export(willamette)
+export(wm_1)
+export(wm_2)
+export(wm_3)
 export(yale)
 export(yeshiva)
 export(yorku_1)
