--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,10 @@ export(harvard_1)
 export(harvard_2)
 export(harvard_3)
 export(hu_1)
+export(hu_1_2022)
+export(hu_1_digital)
 export(hu_2)
+export(hu_2_2022)
 export(jhu_0)
 export(jhu_1)
 export(jhu_2)
