--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(hu_1_2022)
 export(hu_1_digital)
 export(hu_2)
 export(hu_2_2022)
+export(hu_3_accent)
 export(jhu_0)
 export(jhu_1)
 export(jhu_2)
