--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,7 @@ export(dundee_background)
 export(dundee_block)
 export(dundee_core)
 export(dundee_highlight)
-export(edinburgh_1)
+export(edinburgh)
 export(eth_1)
 export(eth_2)
 export(eth_3)
