--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,9 @@ export(northwestern_1)
 export(northwestern_2)
 export(notredame_1)
 export(notredame_2)
+export(nottingham_1)
+export(nottingham_2)
+export(nottingham_3)
 export(nyu_1)
 export(nyu_2)
 export(nyu_accent)
