--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,8 @@ export(mit)
 export(monash_1)
 export(monash_2)
 export(mpg)
+export(mq_1)
+export(mq_2)
 export(msu)
 export(mun_1)
 export(mun_2)
