--- a/NAMESPACE
+++ b/NAMESPACE
@@ -221,6 +221,8 @@ export(willamette)
 export(wm_1)
 export(wm_2)
 export(wm_3)
+export(wollongong_1)
+export(wollongong_2)
 export(yale)
 export(yeshiva)
 export(yorku_1)
