--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(UCSD_3_neutral)
 export(asu_1)
 export(asu_2)
 export(asu_3)
+export(auckland_1)
+export(auckland_2)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham_1)
