--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ export(nyu_accent)
 export(nyu_neutral)
 export(ohio_uni_1)
 export(ohio_uni_2)
+export(otago)
 export(oxford_blog)
 export(oxford_brand)
 export(oxford_error)
