--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(manchester_uni_1)
 export(manchester_uni_accent)
 export(manitoba_1)
 export(manitoba_2)
+export(maynooth)
 export(mcgill_brights)
 export(mcgill_darks)
 export(mcgill_grey)
