--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(ANU_2)
 export(CMU_1_core)
 export(CMU_2_tartan)
 export(CMU_3_campus)
+export(UCC_1)
+export(UCC_2)
 export(UCLA_1)
 export(UCLA_2)
 export(UCLA_3)
