--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(bu)
 export(caltech_1)
 export(caltech_2)
 export(caltech_3)
+export(cardiff_1)
+export(cardiff_2)
 export(carleton)
 export(chicago_1)
 export(chicago_2)
