--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(UCLA_3)
 export(UCSD_1_core)
 export(UCSD_2_accent)
 export(UCSD_3_neutral)
+export(aberystwyth_1)
+export(aberystwyth_2)
 export(asu_1)
 export(asu_2)
 export(asu_3)
