--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ export(auckland_1)
 export(auckland_2)
 export(berkeley_1)
 export(berkeley_2)
-export(birmingham_1)
+export(birmingham)
 export(brown_1)
 export(brown_2)
 export(bu)
