--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(CMU_2_tartan)
 export(CMU_3_campus)
 export(UCC_1)
 export(UCC_2)
+export(UCD)
 export(UCLA_1)
 export(UCLA_2)
 export(UCLA_3)
