--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,8 @@ export(caltech_3)
 export(cardiff_1)
 export(cardiff_2)
 export(carleton)
-export(chicago_1)
-export(chicago_2)
+export(uchicago_1)
+export(uchicago_2)
 export(columbia)
 export(conc_1)
 export(conc_2)
