--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,9 @@ export(UCD)
 export(UCLA_1)
 export(UCLA_2)
 export(UCLA_3)
-export(UCSD_1_core)
-export(UCSD_2_accent)
-export(UCSD_3_neutral)
+export(UCSD_1)
+export(UCSD_2)
+export(UCSD_3)
 export(aberystwyth_1)
 export(aberystwyth_2)
 export(asu_1)
