--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,9 @@ export(standrews_2)
 export(stanford_1)
 export(stanford_2_accent)
 export(stanford_3_web)
+export(stirling_1)
+export(stirling_2)
+export(stirling_3)
 export(trinity_1)
 export(trinity_2)
 export(ubc_1)
