--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,7 @@ export(lmu_1)
 export(lmu_2)
 export(lmu_3)
 export(manchester_uni_1)
-export(manchester_uni_accent)
+export(manchester_uni_2)
 export(manitoba_1)
 export(manitoba_2)
 export(maynooth)
