--- a/NAMESPACE
+++ b/NAMESPACE
@@ -218,8 +218,8 @@ export(uottawa)
 export(upenn_1)
 export(upenn_2)
 export(utoronto)
-export(uvic_complementary)
-export(uvic_core)
+export(uvic_2)
+export(uvic_1)
 export(uwaterloo_arts)
 export(uwaterloo_engineering)
 export(uwaterloo_environment)
