--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,7 +159,7 @@ export(stirling_2)
 export(stirling_3)
 export(trinity_1)
 export(trinity_2)
-export(ubc_1)
+export(ubc)
 export(ucalgary_1)
 export(ucalgary_2)
 export(ucalgary_accent)
