--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,9 @@ export(caltech_3)
 export(cardiff_1)
 export(cardiff_2)
 export(carleton)
-export(columbia)
+export(columbia_1)
+export(columbia_2)
+export(columbia_3)
 export(conc_1)
 export(conc_2)
 export(conc_3)
