--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-## .gitignore | unicol | 2023 09 20
+## .gitignore | unicol | 2023 09 23
 
 ## 1. generic stuff: -----
 
@@ -67,10 +67,12 @@ cran-comments.md
 
 # dirs:
 _gitless
-
+inst/doc
 
 # files:
 .PowerFolder
 desktop.ini
 
 ## eof.
+/doc/
+/Meta/
