--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,6 @@
 
 export(ANU_1)
 export(ANU_2)
-export(CMU_1_core)
-export(CMU_2_tartan)
-export(CMU_3_campus)
 export(UCC_1)
 export(UCC_2)
 export(UCD)
@@ -34,6 +31,9 @@ export(caltech_3)
 export(cardiff_1)
 export(cardiff_2)
 export(carleton)
+export(cmu_1)
+export(cmu_2)
+export(cmu_3)
 export(columbia_1)
 export(columbia_2)
 export(columbia_3)
