rename pals (for consistency)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,8 +144,8 @@ export(sfu_brand)
 export(standrews_1)
 export(standrews_2)
 export(stanford_1)
-export(stanford_2_accent)
-export(stanford_3_web)
+export(stanford_2)
+export(stanford_3)
 export(stirling_1)
 export(stirling_2)
 export(stirling_3)
