--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,10 @@ export(cmu_3)
 export(columbia_1)
 export(columbia_2)
 export(columbia_3)
-export(conc_1)
-export(conc_2)
-export(conc_3)
-export(conc_4)
+export(concordia_1)
+export(concordia_2)
+export(concordia_3)
+export(concordia_4)
 export(cornell_1)
 export(cornell_2)
 export(cornell_3_accent)
