--- a/NAMESPACE
+++ b/NAMESPACE
@@ -203,6 +203,9 @@ export(uni_koeln_2)
 export(uni_konstanz_1)
 export(uni_konstanz_2)
 export(uni_lisbon)
+export(uni_magdeburg_1)
+export(uni_magdeburg_2)
+export(uni_magdeburg_3)
 export(uni_manchester)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
