--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ export(uni_freiburg_info)
 export(uni_goettingen_1)
 export(uni_goettingen_2)
 export(uni_goettingen_3)
+export(uni_halle)
 export(uni_hamburg_1)
 export(uni_hamburg_2)
 export(uni_heidelberg)
