--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(asu_2)
 export(asu_3)
 export(auckland_1)
 export(auckland_2)
+export(bangor_1)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham)
