--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(asu_3)
 export(auckland_1)
 export(auckland_2)
 export(bangor_1)
+export(bangor_2)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham)
