--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(auckland_1)
 export(auckland_2)
 export(bangor_1)
 export(bangor_2)
+export(bangor_3)
+export(bangor_4)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham)
