--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ export(nyu_accent)
 export(nyu_neutral)
 export(ohio_uni_1)
 export(ohio_uni_2)
+export(oslo)
 export(otago)
 export(oxford_blog)
 export(oxford_brand)
