--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,9 @@ export(bangor_1)
 export(bangor_2)
 export(bangor_3)
 export(bangor_4)
+export(bergen_1)
+export(bergen_2)
+export(bergen_3)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham)
