add 4th pal of Uni Bergen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(bangor_4)
 export(bergen_1)
 export(bergen_2)
 export(bergen_3)
+export(bergen_4)
 export(berkeley_1)
 export(berkeley_2)
 export(birmingham)
