--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,6 +158,8 @@ export(stanford_3)
 export(stirling_1)
 export(stirling_2)
 export(stirling_3)
+export(stockholm_1)
+export(stockholm_2)
 export(trinity_1)
 export(trinity_2)
 export(ubc)
