add uppsala palette and info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ export(unicol_data)
 export(uottawa)
 export(upenn_1)
 export(upenn_2)
+export(uppsala)
 export(utoronto)
 export(uvic_1)
 export(uvic_2)
