--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(galway_1)
 export(galway_2)
 export(glasgow_1)
 export(glasgow_2)
+export(gothenburg)
 export(groningen_1)
 export(groningen_2)
 export(guelph)
