--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,9 @@ export(limerick_2)
 export(lmu_1)
 export(lmu_2)
 export(lmu_3)
+export(lund_1)
+export(lund_2)
+export(lund_3)
 export(manchester_uni_1)
 export(manchester_uni_2)
 export(manitoba_1)
