--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,8 @@ export(jhu_1)
 export(jhu_2)
 export(jhu_3_accent)
 export(jhu_4_gray)
+export(ku_1)
+export(ku_2)
 export(lancaster_1)
 export(lancaster_2)
 export(laval)
