--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,9 @@ export(guelph)
 export(harvard_1)
 export(harvard_2)
 export(harvard_3)
+export(helsinki_1)
+export(helsinki_2)
+export(helsinki_3)
 export(hu_1)
 export(hu_1_2022)
 export(hu_1_digital)
